# codex_router

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  config.yaml.example  pyproject.toml
.claude/: settings.local.json
codex_router/: __init__.py  __main__.py  admin.py  codex_config.py  config.py  config_manager.py  errors.py  main.py  models.py  response_store.py  router.py  stats.py  token_db.py  ws_handler.py
codex_router/converters/: anthropic_request.py  anthropic_response.py  anthropic_streaming.py  common.py  request.py  response.py  streaming.py
codex_router/static/: admin.html
docs/superpowers/plans/: 2026-05-15-model-hot-swap-admin-panel.md
docs/superpowers/specs/: 2026-05-15-model-hot-swap-admin-panel-design.md
