[project]
name = "codex-router"
dynamic = ["version"]
description = "Proxy server converting OpenAI Responses API to Chat Completions API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pyyaml>=6.0",
    "tomlkit>=0.13",
]

[project.scripts]
codex-router = "codex_router.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "codex_router/version.py"
